--- a/files/ant/build.xml
+++ b/files/ant/build.xml
@@ -711,7 +711,8 @@
                         <instr verbosity="${verbosity}"
                                mode="overwrite"
                                instrpath="${out.absolute.dir}/classes"
-                               outdir="${out.absolute.dir}/classes">
+                               outdir="${out.absolute.dir}/classes"
+                               metadatafile="${out.absolute.dir}/coverage.em">
                             <filter excludes="${emma.default.filter}" />
                             <filter value="${emma.filter}" />
                         </instr>
@@ -1185,10 +1186,16 @@
             <!-- Application package of the tested project extracted from its manifest file -->
             <xpath input="${tested.project.absolute.dir}/AndroidManifest.xml"
                     expression="/manifest/@package" output="tested.project.app.package" />
+
+            <getproperty projectPath="${tested.project.absolute.dir}"
+                bin="tested.project.out.absolute.dir"
+                src="tested.project.source.absolute.dir" />
         </then>
         <else>
             <!-- this is a test app, the tested package is the app's own package -->
             <property name="tested.project.app.package" value="${project.app.package}" />
+            <property name="tested.project.out.absolute.dir" value="${out.absolute.dir}" />
+            <property name="tested.project.source.absolute.dir" value="${source.absolute.dir}" />
         </else>
         </if>
 
@@ -1210,25 +1217,23 @@
                     <arg line="${adb.device.arg}" />
                     <arg value="pull" />
                     <arg value="${emma.dump.file}" />
-                    <arg value="coverage.ec" />
+                    <arg value="${out.absolute.dir}/coverage.ec" />
                 </exec>
                 <echo level="info">Extracting coverage report...</echo>
                 <emma>
-                    <report sourcepath="${tested.project.absolute.dir}/${source.dir}"
-                                      verbosity="${verbosity}">
+                    <report sourcepath="${tested.project.source.absolute.dir}"
+                            verbosity="${verbosity}">
                         <!-- TODO: report.dir or something like should be introduced if necessary -->
-                        <infileset dir="${out.absolute.dir}">
-                            <include name="coverage.ec" />
-                            <include name="coverage.em" />
-                        </infileset>
+                        <infileset file="${out.absolute.dir}/coverage.ec" />
+                        <infileset file="${tested.project.out.absolute.dir}/coverage.em" />
                         <!-- TODO: reports in other, indicated by user formats -->
-                        <html outfile="coverage.html" />
+                        <html outfile="${out.absolute.dir}/coverage.html" />
                    </report>
                 </emma>
                 <echo level="info">Cleaning up temporary files...</echo>
                 <delete file="${out.absolute.dir}/coverage.ec" />
                 <delete file="${out.absolute.dir}/coverage.em" />
-                <echo level="info">Saving the report file in ${basedir}/coverage/coverage.html</echo>
+                <echo level="info">Saving the report file in ${out.absolute.dir}/coverage.html</echo>
             </then>
             <else>
                 <run-tests-helper />
