Project wizard tweaks
Get rid of the ApplicationSkeleton page, and move the Create Custom
Icon checkbox up to the front page.  Also add a new "Mark as library
project" checkbox there, which allows to create a new library project.
Move the icon page up such that it appears before the activity
template pages. Fix a bug in minSdk handling.  And get rid of the
"Android Blank Project" wizard since it's now redundant with the
Android Application Project.

(cherry picked from commit 93fcf4cee5a95dca2427d49a7a73fc8ddac3812c)

Change-Id: I7b69cc9df6aa5a99f0cfbd301ac4a3afdebf7796

--- a/eclipse/plugins/com.android.ide.eclipse.adt/plugin.xml
+++ b/eclipse/plugins/com.android.ide.eclipse.adt/plugin.xml
@@ -167,8 +167,6 @@
         <category
             id="com.android.ide.eclipse.wizards.category"
             name="Android" />
-
-        <!-- New template-based project wizard -->
         <wizard
             canFinishEarly="false"
             category="com.android.ide.eclipse.wizards.category"
@@ -177,20 +175,7 @@
             hasPages="true"
             icon="icons/new_adt_project.png"
             id="ccom.android.ide.eclipse.adt.project.NewProjectWizard"
-            name="Android Application"
-            preferredPerspectives="org.eclipse.jdt.ui.JavaPerspective"
-            project="true" />
-
-        <!-- Old custom-coded project wizard -->
-        <wizard
-            canFinishEarly="false"
-            category="com.android.ide.eclipse.wizards.category"
-            class="com.android.ide.eclipse.adt.internal.wizards.newproject.NewProjectWizard"
-            finalPerspective="org.eclipse.jdt.ui.JavaPerspective"
-            hasPages="true"
-            icon="icons/new_adt_project.png"
-            id="com.android.ide.eclipse.adt.project.NewProjectWizard.Old"
-            name="Android Blank Project"
+            name="Android Application Project"
             preferredPerspectives="org.eclipse.jdt.ui.JavaPerspective"
             project="true" />
         <wizard
