--- a/anttasks/src/anttasks.properties
+++ b/anttasks/src/anttasks.properties
@@ -1,20 +1,20 @@
-checkenv:					com.android.ant.CheckEnvTask
-gettype:					com.android.ant.GetTypeTask
-gettarget:					com.android.ant.GetTargetTask
-getproperty:				com.android.ant.GetProjectPropertyTask
-getlibs:					com.android.ant.GetLibraryListTask
-dependency:					com.android.ant.ComputeDependencyTask
-testedprojectclasspath:		com.android.ant.ComputeProjectClasspathTask
-getemmafilter:				com.android.ant.GetEmmaFilterTask
-mergemanifest:				com.android.ant.ManifestMergerTask
-aapt:						com.android.ant.AaptExecTask
-aidl:						com.android.ant.AidlExecTask
-renderscript:				com.android.ant.RenderScriptTask
-buildconfig:				com.android.ant.BuildConfigTask
-dex:						com.android.ant.DexExecTask
-apkbuilder:					com.android.ant.ApkBuilderTask
-signapk:					com.android.ant.SignApkTask
-zipalign:					com.android.ant.ZipAlignTask
-xpath:						com.android.ant.XPathTask
-if:							com.android.ant.IfElseTask
-propertybyreplace:			com.android.ant.PropertyByReplaceTask
+checkenv:                   com.android.ant.CheckEnvTask
+gettype:                    com.android.ant.GetTypeTask
+gettarget:                  com.android.ant.GetTargetTask
+getprojectpaths:            com.android.ant.GetProjectPathsTask
+getlibpath:                 com.android.ant.GetLibraryPathTask
+dependency:                 com.android.ant.ComputeDependencyTask
+testedprojectclasspath:     com.android.ant.ComputeProjectClasspathTask
+getemmafilter:              com.android.ant.GetEmmaFilterTask
+mergemanifest:              com.android.ant.ManifestMergerTask
+aapt:                       com.android.ant.AaptExecTask
+aidl:                       com.android.ant.AidlExecTask
+renderscript:               com.android.ant.RenderScriptTask
+buildconfig:                com.android.ant.BuildConfigTask
+dex:                        com.android.ant.DexExecTask
+apkbuilder:                 com.android.ant.ApkBuilderTask
+signapk:                    com.android.ant.SignApkTask
+zipalign:                   com.android.ant.ZipAlignTask
+xpath:                      com.android.ant.XPathTask
+if:                         com.android.ant.IfElseTask
+propertybyreplace:          com.android.ant.PropertyByReplaceTask
