Remove "Template Development Wizard" from template list
(cherry picked from commit 4cbe4b07c6320aa157aba9eda0f7138784aa50c3)

Change-Id: I8bce4445d6e29f9d7b15eeae99df0eee0071152a

--- a/eclipse/plugins/com.android.ide.eclipse.adt/plugin.xml
+++ b/eclipse/plugins/com.android.ide.eclipse.adt/plugin.xml
@@ -318,7 +318,7 @@
             </description>
         </wizard>
 
-        <!-- During development only: Support for testing templates -->
+        <!-- During development only: Support for testing templates
         <wizard
             canFinishEarly="false"
             category="com.android.ide.eclipse.wizards.category"
@@ -330,7 +330,7 @@
             name="Template Development Wizard"
             preferredPerspectives="org.eclipse.jdt.ui.JavaPerspective"
             project="false" />
-
+        -->
     </extension>
     <extension point="org.eclipse.debug.core.launchConfigurationTypes">
         <launchConfigurationType
