More template tweaks
Generalize the Add Activity wizard into an Add Android Object
wizard and move Custom View in there, such that it's no longer
a top level wizard. Also place service, content provider and
broadcast receivers there.

Fix indentation in simple activity template, and fix template
wizard such that it doesn't reset all the values when you
leave the page (to preview page or previous selector page)
and come back - unless the template has changed.

(cherry picked from commit a85ff38b62bbeb35ace582729a0cf07088d3905a)

Change-Id: Ib69a15094e4f07e9f42d67f226e7722464927cdd

--- a/eclipse/plugins/com.android.ide.eclipse.adt/plugin.xml
+++ b/eclipse/plugins/com.android.ide.eclipse.adt/plugin.xml
@@ -290,6 +290,22 @@
         <wizard
             canFinishEarly="false"
             category="com.android.ide.eclipse.wizards.category"
+            class="com.android.ide.eclipse.adt.internal.wizards.templates.NewActivityWizard$OtherWizard"
+            finalPerspective="org.eclipse.jdt.ui.JavaPerspective"
+            hasPages="true"
+            icon="icons/newCustomView.png"
+            id="com.android.ide.eclipse.editors.wizards.NewActivityWizard.OtherWizard"
+            name="Android Object"
+            preferredPerspectives="org.eclipse.jdt.ui.JavaPerspective"
+            project="false" >
+            <description>
+               Create an Android object such as a Service, an Activity, a Broadcast Receiver, etc.
+            </description>
+        </wizard>
+        <!-- Available through generic object list above
+        <wizard
+            canFinishEarly="false"
+            category="com.android.ide.eclipse.wizards.category"
             class="com.android.ide.eclipse.adt.internal.wizards.templates.NewTemplateWizard$NewCustomViewWizard"
             finalPerspective="org.eclipse.jdt.ui.JavaPerspective"
             hasPages="true"
@@ -302,6 +318,7 @@
                Create an Android custom view
             </description>
         </wizard>
+        -->
         <wizard
             canFinishEarly="false"
             category="com.android.ide.eclipse.wizards.category"
