Add Tracer for OpenGL ES perspective to ADT external site
(cherry picked from commit 95fa1cd76a5cac2704e1664c0fbe131972b61fb2)

Change-Id: Ib1976e0b5463d9ae9d2209eb99a0e77881c11f44

--- a/eclipse/plugins/com.android.ide.eclipse.gldebugger/plugin.xml
+++ b/eclipse/plugins/com.android.ide.eclipse.gldebugger/plugin.xml
@@ -6,10 +6,10 @@
          point="org.eclipse.ui.views">
       <category
             id="com.android.ide.eclipse.gltrace"
-            name="Android OpenGL Trace">
+            name="Tracer for OpenGL ES">
       </category>
       <view
-            name="OpenGL ES 2.0 Debugger"
+            name="OpenGL Trace"
             icon="icons/sample.gif"
             category="com.android.ide.eclipse.gltrace"
             class="com.android.ide.eclipse.gldebugger.GLFramesView"
@@ -84,7 +84,7 @@
             class="com.android.ide.eclipse.gltrace.GLTracePerspective"
             icon="icons/opengl.png"
             id="com.android.ide.eclipse.gltrace.perspective"
-            name="OpenGL Trace">
+            name="Tracer for OpenGL ES">
       </perspective>
    </extension>
    <extension
